complete a lot and start with dic and config, still with some bugs in